SVS BodyPose Init

--- a/notebooks/Demo Pose Machine.ipynb
+++ b/notebooks/Demo Pose Machine.ipynb
@@ -275,9 +275,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:menpo]",
+   "display_name": "Python [conda env:gitdev]",
    "language": "python",
-   "name": "conda-env-menpo-py"
+   "name": "conda-env-gitdev-py"
   },
   "language_info": {
    "codemirror_mode": {
